# rwkv_rl

./: .continueignore  .gitmodules  Cargo.toml  Dockerfile  upstream_test.py
crates/chess/: Cargo.toml
crates/chess/src/: chess_bot.rs  lib.rs  self_play_main.rs  self_play_train.rs  uci_main.rs
crates/rusty_bar/: Cargo.toml  install.sh
crates/rusty_bar/data/: AIInfo.lua  AIOptions.lua
crates/rusty_bar/src/: lib.rs
crates/rwkv/: Cargo.toml
crates/rwkv/examples/: performance_test.rs  simple_gen.rs  simple_sft.rs
crates/rwkv/src/: context_manager.rs  lib.rs  load_rwkv_block.py  rwkv7.rs  sampling.rs  simple_gen.rs  test_accuracy.rs  tokenizer.rs
crates/rwkv/src/rwkv7/: burn_impl.rs  fused_impl.rs  fused_impl_kernel.rs  kernel.rs  mod.rs
crates/rwkv_test/: Cargo.toml
crates/rwkv_test/src/: main.rs
src/: main.rs  rwkv.rs
