[patch.crates-io]
candle-core = { path="libs/candle/candle-core" }

[workspace]
members = ["crates/rwkv", "crates/rusty_bar", "crates/chess"]
exclude = ["libs"]
resolver = "3"

[workspace.dependencies]
burn = {path="libs/burn/crates/burn", default-features=false }
burn-import = {path="libs/burn/crates/burn-import", default-features=false, features=["pytorch"] }
rwkv-tokenizer = {path="libs/rwkv-tokenizer/rwkv-tokenizer"}
