[patch.crates-io]
#candle-core = { path="libs/candle/candle-core" }
candle-core = { git="https://github.com/huggingface/candle.git", branch="main", package="candle-core" }

[workspace]
members = ["crates/rusty_bar", "crates/chess"]
exclude = ["libs"]
resolver = "3"

[workspace.dependencies]
burn = {git="https://github.com/tracel-ai/burn", default-features=false }
burn-import = {git="https://github.com/tracel-ai/burn", default-features=false }
burn-fusion = {git="https://github.com/tracel-ai/burn", default-features=false }
burn-autodiff = {git="https://github.com/tracel-ai/burn", default-features=false }
burn-cubecl = {git="https://github.com/tracel-ai/burn", default-features=false }
rwkv-tokenizer = {git="https://github.com/cahya-wirawan/rwkv-tokenizer.git"}
rwkv-burn = {path="libs/RWKV-burn"}

