[package]
name = "chess"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "uci_chess"
path = "src/uci_main.rs"

[[bin]]
name = "self_play_chess"
path = "src/self_play_main.rs"

[[bin]]
name = "self_play_train_chess"
path = "src/self_play_train.rs"

[lib]
name = "chessbot_lib"
path = "src/lib.rs"

[dependencies]
uci-parser = "1.1.0"
shakmaty = "0.27.2"
rwkv = {path = "../rwkv"}
rwkv-tokenizer = {workspace = true}
burn = {workspace=true, default-features=false, features=["autodiff"] }
burn-import = {workspace=true, default-features=false, features=["pytorch"] }
rand = "0.8.5"
llm-samplers = "0.0.7"

[features]
default = ["ndarray"]
cuda = ["burn/cuda"]
vulkan = ["burn/vulkan"]
fusion = ["burn/fusion", "rwkv/fusion"]
ndarray = ["burn/ndarray"]
blas = ["burn/openblas", "ndarray"]