[package]
name = "rwkv"
version = "0.1.0"
edition = "2021"

[dependencies]
#burn = {version="0.16.0", default-features=false }
burn = {git="https://github.com/tracel-ai/burn", default-features=false }
rand = "0.8.5"
llm-samplers = "0.0.7"
rwkv-tokenizer = {path="../../libs/rwkv-tokenizer/rwkv-tokenizer"}