[package]
name = "rwkv_test"
version = "0.1.0"
edition = "2021"

[dependencies]
rwkv = { path = "../rwkv" }
burn = {git="https://github.com/tracel-ai/burn", default-features=false }
burn-import = {git="https://github.com/tracel-ai/burn", default-features=false, features=["pytorch"] }

[dependencies.pyo3]
version = "0.24.0"
features = ["auto-initialize"]

[features]
wgpu = ["burn/wgpu"]
#hip = ["burn/hip"]
#cuda = ["burn/cuda-jit"]
#candle = ["burn/candle"]
vulkan = ["burn/vulkan"]
#fusion = ["burn/fusion"]
ndarray = ["burn/ndarray", "burn/openblas"]